# Battlewrench

./: .cproject  .project  CMakeLists.txt  README.md  main.c
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/glfw/src/: Makefile  cmake_install.cmake
src/: main.c
src/Battlewrench/: GameLauncher.c
src/Shaders/: FragmentShader.txt  Shaders.c  Shaders.h  VertexShader.txt
src/Util/: Util.c  Util.h
src/shaders/: shader.h
